# gold-panel

./: .gitignore  .pre-commit-config.yaml  README.md  build.sh  client.py  config.py  gold-panel.spec  main.py  pyproject.toml  run.py  service.py  setup.py
